=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

all changes without author attribution are by Doug MacEachern

=over 3

=item 1.21_01-dev

fix get_set_PVp in mod_perl_xs.h
[Michal Jaegermann <michal@ellpspace.math.ualberta.ca>]

tweaks to compile/run with 5.5.670 + -Dusethreads

$r->hostname now documented [Eric Cholet <cholet@logilune.com>]

Apache::File methods are now documented 
[Eric Cholet <cholet@logilune.com>]

avoid quoting <Perl> config if args_how == RAW_ARGS
thanks to Michael Schout for the spot

PerlPassEnv maintains its value beyond the first request,
thanks to Chris Thorman for the spot

prevent possible core dump in $r->pnotes if get_module_config returns
NULL, thanks to Kevin Murphy for the spot

fix Apache::Status::status_cv_dump for Perl/5.6-dev

use perl_get_sv("]") instead of patchlevel for $AddPerlVersion

adjust Makefile.PL and Apache::src to parse 1.3.13-dev's httpd.h

Apache::Util functions $r->unescape_uri, $r->unescape_uri_info,
$r->size_string are now documented [Eric Cholet <cholet@logilune.com>]

$r->request_time is now documented [Jeffrey W. Baker <jwbaker@acm.org>]

Look for the makepl_args.mod_perl file as .makepl_args.mod_perl in
./ and ../ too since the book says it works so. [Ask Bjoern Hansen
<ask@valueclick.com>]

PerlRestartHandler is now enabled w/ ALL_HOOKS=1 (or EVERYTHING=1)

$r->no_cache(1) will now set the r->headers_out "Pragma" and
"Cache-control" to "no-cache"

`PerlSetEnv PERL5LIB ...' now works again, thanks to Stas for the spot

Apache::test fix for Apache::Table

PerlFreshRestart semantics changed to preserve order of PerlModule's
and not to reload modules while actually iterating over %INC

$r->current_callback now works properly when PerlHandler invokes
subrequests, thanks to James Smith for the spot

if an Apache::Table is NULL return undef (e.g. $r->notes during ChildInit)

ActivePerl compile patches [Jochen Wiedmann <joe@ispsoft.de>]

document that Apache 1.2.x is no longer supported
